--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/login.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/login.html
@@ -2,13 +2,13 @@
 <html xmlns:th=http://www.thymeleaf.org>
 	<head >
 		
-		
+		<th: required="../include/head.html"></th:>
 		
 		<title>LOGIN</title>
 		
 	</head>
 	<body>
-		<div>
+		<div class="container-fluid bg-primary">
 			
 		</div>
 		
