--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -10,7 +10,7 @@
 				<a class="nav-link" href="#">INICIO</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="listaUsuario">USUARIO</a>
+				<a class="nav-link" href="/listaUsuario">USUARIO</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="/">PRODUCTO</a>
