--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
@@ -11,15 +11,16 @@
 
 	<div th:replace="../static/include/navbar"></div>
 
-	<div class="container pt-3 bg-light vh-100">
+	<div class="container pt-3 bg-light vh-100 ">
 		<div>
 			<h2>LISTA DE USUARIO</h2>
 		</div>
-		
-		<div>
-			<a href="agregarUsuario">NUEVO USUARIO</a>
+
+		<div class="my-4">
+			<a  class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#gestionarUsuario"
+				href="agregarUsuario">NUEVO USUARIO</a>
 		</div>
-		
+
 		<div class="card">
 			<table class="table table-bordered">
 				<thead>
@@ -44,13 +45,108 @@
 						<td th:text="${usuario.email_usuario}"></td>
 						<td th:text="${usuario.estado_usuario}"></td>
 						<td>
-							<a class="btn btn-primary" th:ref="@{actualizaUsuario/{id}(id=${usuario.id_usuario})}">EDITAR</a>
+							<a th:href="@{/actualizaUsuario/{id}(id=${usuario.id_usuario})}" class="btn btn-primary" >EDITAR</a>
 						</td>
 					</tr>
 				</tbody>
 			</table>
 		</div>
 
+	</div>
+
+	<!-- INICIAMOS EL MODAL PARA TRATADO DE DATOS -->
+
+	<div class="modal fade modal-lg" id="gestionarUsuario" data-bs-backdrop="static">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header text-bg-danger">
+					<h2 class="modal-title fs-5">USUARIO</h2>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<div>
+						<form th:action="@{grabarUsuario}" th:object="${usuario}" method="post">
+
+							<div class="d-flex flex-column gap-2">
+								<div class="row row-cols-3 ">
+									<div>
+										<label>ID</label>
+										<input class="form-control" type="text" />
+									</div>
+									<div>
+										<label>FECHA REG</label>
+										<input class="form-control"  type="text" />
+									</div>
+									<div>
+										<label>ESTADO</label>
+										<input class="form-control"  type="text" />
+									</div>
+								</div>
+
+								<div class="row row-cols-2 g-2">
+
+									<div>
+										<label>NOMBRE</label>
+										<input class="form-control" type="text" />
+									</div>
+									<div>
+										<label>APELLIDO</label>
+										<input class="form-control" type="text" />
+									</div>
+									<div>
+										<label>TIPO</label>
+										<input class="form-control" type="text" />
+									</div>
+									<div>
+										<label>TELEFONO</label>
+										<input class="form-control" type="tel" />
+									</div>
+									<div>
+										<label>CELULAR</label>
+										<input class="form-control" type="tel" />
+									</div>
+									<div>
+										<label>DISTRITO</label>
+										<input class="form-control" type="text" />
+									</div>
+									<div>
+										<label>DIRECCION</label>
+										<input class="form-control" type="text" />
+									</div>
+									<div>
+										<label>DNI</label>
+										<input class="form-control" type="text" />
+									</div>
+									<div>
+										<label>EMAIL</label>
+										<input class="form-control" type="email" />
+									</div>
+									<div>
+										<label>PASSWORD</label>
+										<input class="form-control" type="text" />
+									</div>
+									<div>
+										<label>IMAGEN</label>
+										<input class="form-control" type="file" />
+									</div>
+									<div>
+										<label>ESTADO</label>
+										<input class="form-control" type="text" />
+									</div>
+								</div>
+							</div>
+
+						</form>
+					</div>
+				</div>
+				<div class="modal-footer">
+					<div>
+						<button type=submit class="btn btn-success">GRABAR</button>
+					</div>
+				</div>
+
+			</div>
+		</div>
 	</div>
 
 
