--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -1,10 +1,10 @@
 <div class="position-sticky top-0 text-bg-dark z-3">
-	
-	<div class="container navbar navbar-expand  navbar-dark">	
+
+	<div class="container-fluid navbar navbar-expand  navbar-dark">
 		<div class="navbar-toggle m-2">
 			<img src="https://lenaycarbon.pe/assets/img/logo.png" width="100px" height="100px" />
 		</div>
-		
+
 		<ul class="navbar-nav ">
 			<li class="nav-item">
 				<a class="nav-link" href="#">INICIO</a>
@@ -16,6 +16,33 @@
 				<a class="nav-link" href="/">PRODUCTO</a>
 			</li>
 		</ul>
+
+		<div class="d-flex ms-auto">
+			<a class="mx-3" href="#">
+				<img src="https://storage.googleapis.com/camaracomercio/assets/img/imgCart/cart.png" width="80px"
+					height="80px" />
+			</a>
+			<div class="dropdown  mx-3">
+				<a role="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true" >
+					<img 
+						src="https://cdn.pixabay.com/photo/2012/04/13/21/07/user-33638_1280.png" width="80px"
+						heigth="80px">
+				</a>
+
+				<ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark">
+
+					<li class="dropdown-item">
+						DATOS
+					</li>
+					<li class="dropdown-item">
+						CERRAR SESION
+					</li>
+
+				</ul>
+
+			</div>
+		</div>
+
 	</div>
-	
+
 </div>
