--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -18,16 +18,17 @@
 		</ul>
 
 		<div class="d-flex ms-auto">
-			<a class="mx-3" href="#">
+			<a class="mx-3 text-decoration-none" href="#">
 				<img src="https://storage.googleapis.com/camaracomercio/assets/img/imgCart/cart.png" width="80px"
 					height="80px" />
 			</a>
 			<div class="dropdown  mx-3">
-				<a role="button" class="dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="true" >
+				
+				<div class="dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="true" >
 					<img 
 						src="https://cdn.pixabay.com/photo/2012/04/13/21/07/user-33638_1280.png" width="80px"
 						heigth="80px">
-				</a>
+				</div>
 
 				<ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark">
 
