--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/registraUsuario.html
@@ -8,7 +8,7 @@
 <body>
 	<div th:replace="../static/include/navbar"></div>
 
-	<div class="container bg-light vh-100">
+	<div class="container-xl bg-light vh-100">
 		<div>
 			<h2>ACTUALIZAR USUARIO</h2>
 		</div>
