opcion de plantilla

--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
@@ -22,7 +22,7 @@
 			<a class="btn btn-success" th:href="@{registraUsuario}">NUEVO USUARIO</a>
 		</div>
 
-		<div class="card">
+		<div class="card table-responsive">
 			<table class="table table-bordered">
 				<thead>
 					<tr>
