--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -1,13 +1,14 @@
 <div class="position-sticky top-0 text-bg-dark z-3">
 
-	<div class="container-fluid navbar navbar-expand  navbar-dark">
+	<navbar class="container-fluid navbar navbar-expand  navbar-dark">
+		
 		<div class="navbar-toggle m-2">
-			<img src="https://lenaycarbon.pe/assets/img/logo.png" width="100px" height="100px" />
+			<img src="https://lenaycarbon.pe/assets/img/logo.png" width="80px" height="80px" />
 		</div>
 
 		<ul class="navbar-nav ">
 			<li class="nav-item">
-				<a class="nav-link" href="#">INICIO</a>
+				<a class="nav-link" href="/index">INICIO</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="/listaUsuario">USUARIO</a>
@@ -15,19 +16,30 @@
 			<li class="nav-item">
 				<a class="nav-link" href="/">PRODUCTO</a>
 			</li>
+			
+			<li class="nav-item">
+				<a class="nav-link" href="/homeProducto">HOME PRODUCTO</a>
+			</li>
 		</ul>
 
 		<div class="d-flex ms-auto">
-			<a class="mx-3 text-decoration-none" href="#">
-				<img src="https://storage.googleapis.com/camaracomercio/assets/img/imgCart/cart.png" width="80px"
-					height="80px" />
+			<a class="mt-auto mx-3 text-decoration-none" href="#">
+				<img src="https://storage.googleapis.com/camaracomercio/assets/img/imgCart/cart.png" width="40px"
+					height="40px" />
 			</a>
+
 			<div class="dropdown  mx-3">
-				
-				<div class="dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="true" >
-					<img 
-						src="https://cdn.pixabay.com/photo/2012/04/13/21/07/user-33638_1280.png" width="80px"
-						heigth="80px">
+
+				<div class="dropdown-toggle d-flex align-items-center" role="button" data-bs-toggle="dropdown" >
+					<img th:if="${accesoCorrecto}"
+						th:src="@{'data:image;base64,' + ${imagen_usuario}}" width="60px"
+						heigth="60px">
+					<img th:if="!${accesoCorrecto}" src="https://cdn.pixabay.com/photo/2012/04/13/21/07/user-33638_1280.png" width="60px"
+						heigth="60px">
+					<div class="ms-3">
+						<h5 th:if"${accesoCorrecto}" class="m-0" th:text="${aceesoCorrecto}">USUARIO</h5>
+					</div>
+
 				</div>
 
 				<ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark">
@@ -35,8 +47,8 @@
 					<li class="dropdown-item">
 						DATOS
 					</li>
-					<li class="dropdown-item">
-						CERRAR SESION
+					<li class="">
+						<a class="dropdown-item" href="/loginRestaurante">CERRAR SESION</a>
 					</li>
 
 				</ul>
@@ -44,6 +56,6 @@
 			</div>
 		</div>
 
-	</div>
+	</navbar>
 
 </div>
