--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
@@ -29,7 +29,7 @@
     <!-- Start Content -->
     <div class="container py-5 text-bg-secondary">
         <div class="row">
-
+			<!--Navbar de categorias -->	
             <div class="col-lg-3">
                 <h1 class="h2 pb-4">Categories</h1>
                 <ul class="list-unstyled templatemo-accordion">
@@ -66,7 +66,9 @@
                     </li>
                 </ul>
             </div>
-
+            <!--Fin de navbar de categorias -->
+            
+			<!--lista de productos -->
             <div class="col-lg-9">
                 <div class="row">
                     <div class="col-md-6">
@@ -441,6 +443,7 @@
                     </ul>
                 </div>
             </div>
+            <!--fin de lista de productos -->
 
         </div>
     </div>
