--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -1,6 +1,6 @@
-<div class="position-sticky top-0 text-bg-dark z-3">
+<div class="container-fluid position-sticky top-0 text-bg-dark z-3">
 
-	<navbar class="container-fluid navbar navbar-expand  navbar-dark">
+	<nav class="navbar navbar-expand  navbar-dark">
 		
 		<div class="navbar-toggle m-2">
 			<img src="https://lenaycarbon.pe/assets/img/logo.png" width="80px" height="80px" />
@@ -56,6 +56,6 @@
 			</div>
 		</div>
 
-	</navbar>
+	</nav>
 
 </div>
