--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/index.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 	<title>INDEX</title>
 </head>
 
-<body>
+<body class="text-bg-dark bg-opacity-75">
 	
 	<div th:replace="../static/include/navbar"></div>
 	
