--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/homeProducto.html
@@ -4,7 +4,7 @@
 		<div th:replace="../static/include/head"></div>
 		<title>HOME PRODUCTOS</title>
 	</heaad>
-	<body>
+	<body class="text-bg-dark bg-opacity-75">
 		<div th:replace="../static/include/navbar"></div>
 		
 	<!-- Modal -->
@@ -27,7 +27,7 @@
 
 
     <!-- Start Content -->
-    <div class="container-fluid col-11 py-5 text-bg-secondary">
+    <div class="container py-5 ">
         <div class="row">
 			<!--Navbar de categorias -->	
             <div class="col-lg-3">
