--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/loginRestaurante.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/loginRestaurante.html
@@ -9,7 +9,7 @@
 	<title>LOGIN</title>
 </head>
 
-<body>
+<body class="text-bg-dark bg-opacity-75">
 
 	<div th:replace="../static/include/navbar"></div>
 
