--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/index.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/index.html
@@ -7,36 +7,50 @@
 </head>
 
 <body class="text-bg-dark bg-opacity-75">
-	
+
 	<div th:replace="../static/include/navbar"></div>
-	
-	<header id="home" class="header">
-		<div class="overlay text-white text-center my-5">
-			<h1 class="display-2 font-weight-bold my-3">Food Hut</h1>
-			<h2 class="display-4 mb-5">Always fresh &amp; Delightful</h2>
-			<a class="btn btn-lg btn-primary" href="#gallary">View Our gallary</a>
-		</div>
-	</header>
-	
-	<div id="about" class="container-expand text-bg-secondary"  data-wow-duration="1.5s">
-        <div class="row g-0">
-            <div class="col-lg-6 has-img-bg m-0 p-0 ">
-				<img src="https://bbqlife.es/BBQPedia/Consejos/img/lena-o-carbon-2.jpg" width="100%" height="100%" />
+
+	<div>
+		<header id="home" class="header">
+			<div class="overlay text-white text-center my-5">
+				<h1 class="display-2 font-weight-bold my-3">Food Hut</h1>
+				<h2 class="display-4 mb-5">Always fresh &amp; Delightful</h2>
+				<a class="btn btn-lg btn-primary" href="#gallary">View Our gallary</a>
 			</div>
-            <div class="col-lg-6">
-                <div class="row justify-content-center">
-                    <div class="col-sm-8 py-5 my-5">
-                        <h2 class="mb-4">About Us</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
-                        nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
-                        <p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores explicabo.</b></p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ab itaque modi, reprehenderit fugit soluta, molestias optio repellat incidunt iure sed deserunt nemo magnam rem explicabo vitae. Cum, nostrum, quidem.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    
+		</header>
+
+		<div id="about" class="container-expand text-bg-secondary" data-wow-duration="1.5s">
+			<div class="row m-0">
+				<div class="col-lg-6 has-img-bg m-0 p-0 ">
+					<img src="https://bbqlife.es/BBQPedia/Consejos/img/lena-o-carbon-2.jpg" width="100%"
+						height="100%" />
+				</div>
+				<div class="col-lg-6">
+					<div class="row justify-content-center">
+						<div class="col-sm-8 py-5 my-5">
+							<h2 class="mb-4">About Us</h2>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam
+								accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda
+								voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor
+								sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque
+								quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur
+								adipisicing elit. Eum necessitatibus iste,
+								nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam
+								voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas.
+								Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
+							<p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores
+									explicabo.</b></p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ab itaque modi,
+								reprehenderit fugit soluta, molestias optio repellat incidunt iure sed deserunt nemo
+								magnam rem explicabo vitae. Cum, nostrum, quidem.</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 </body>
 
 </html>
