--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -14,7 +14,13 @@
 				<a class="nav-link" href="/listaUsuario">USUARIO</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="/">PRODUCTO</a>
+				<a class="nav-link" href="/listaProducto">PRODUCTO</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/listaColaborador">COLABORADOR</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="/homeProducto">HOME PRODUCTO</a>
 			</li>
 			
 			<li class="nav-item">
