--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/loginRestaurante.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/loginRestaurante.html
@@ -41,11 +41,11 @@
 									<div class="row g-4 m-0 p-0">
 										<div>
 											<label>USUARIO</label>
-											<input class="form-control" th:field="*{cod_usuario}" type="text">
+											<input class="form-control" th:field="*{codUsuario}" type="text">
 										</div>
 										<div>
 											<label>USUARIO</label>
-											<input class="form-control" th:field="*{password_usuario}" type="password">
+											<input class="form-control" th:field="*{passwordUsuario}" type="password">
 										</div>
 									</div>
 									<div class="d-flex-lg gap-2">
