avancé un poco direntrega

--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/static/include/navbar.html
@@ -14,6 +14,9 @@
 				<a class="nav-link" href="/listaUsuario">USUARIO</a>
 			</li>
 			<li class="nav-item">
+				<a class="nav-link" href="/listaDirentrega_usuario">DIRECCION DE ENTREGA</a>
+			</li>
+			<li class="nav-item">
 				<a class="nav-link" href="/listaProducto">PRODUCTO</a>
 			</li>
 			<li class="nav-item">
