--- a/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
+++ b/PJ_RESTAURANTE_5TO_CICLO_WEB/restaurante/src/main/resources/templates/listaUsuario.html
@@ -36,7 +36,7 @@
 						<th>APELLIDO</th>
 						<th>DISTRITO</th>
 						<th>EMAIL</th>
-						<th>IMAGEN</th>
+						<!--<th>IMAGEN</th>-->
 						<th>ESTADO</th>
 						<th>ACCIONES</th>
 					</tr>
